--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@zocenet/postcss-px-to-viewport",
   "description": "A CSS post-processor that converts px to viewport units (vw, vh, vmin, vmax).",
-  "version": "1.1.1",
-  "author": "Dmitry Karpunin <koderfunk@gmail.com>",
+  "version": "0.0.1",
+  "author": "SeinHo <shenghao@zocenet.com>",
   "license": "MIT",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git@github.com:evrone/postcss-px-to-viewport.git"
+    "url": "https://github.com/hosein-code/postcss-px-to-viewport.git"
   },
-  "bugs": "https://github.com/evrone/postcss-px-to-viewport/issues",
-  "homepage": "https://github.com/evrone/postcss-px-to-viewport",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "keywords": [
     "css",
     "units",
@@ -30,15 +30,12 @@
     "build": "tsc",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js spec/*.spec.js"
   },
-  "dependencies": {
-    "object-assign": ">=4.0.1",
-    "typescript": "^5.7.0"
-  },
   "devDependencies": {
+    "typescript": "^5.7.0",
     "jest": "^29.7.0",
-    "postcss": ">=5.0.2"
+    "postcss": "^8.0.0"
   },
   "peerDependencies": {
-    "postcss": "^8.4.0"
+    "postcss": "^8.0.0"
   }
 }
